--- a/infrastructure/supervisord.conf
+++ b/infrastructure/supervisord.conf
@@ -20,8 +20,6 @@ events = PROCESS_LOG
 result_handler = supervisor_stdout:event_handler
 
 
-
-
 [program:consul]
 priority=4
 command=/opt/consul/consul %(ENV_CONSUL_APP_PARAMS)s
@@ -34,34 +32,23 @@ stderr_events_enabled = true
 priority=2
 command=/usr/sbin/dnsmasq %(ENV_DNSMASQ_APP_PARAMS)s
 autorestart=true
+autostart=%(ENV_DNSMASQ_START)s
 user=root
 stdout_events_enabled = true
 stderr_events_enabled = true
 
 [program:haproxy_watcher]
 priority=16
-command=/opt/consul_template/haproxy_watcher.sh
+command=/opt/consul-template/haproxy_watcher.sh
 autorestart=true
 user=root
 stdout_events_enabled = true
 stderr_events_enabled = true
 
-; Current workaround for
-; https://github.com/hashicorp/consul-template/issues/198
-;
-[program:consul_template_generator]
+[program:haproxy_consul-template]
 priority=16
-command=consul-template -wait 0.5s -template "template.conf:haproxy.tmpl:pkill -SIGHUP consul-template" -consul=%(ENV_CONSUL_IP)s:8500
-autorestart=true
-directory=/opt/consul_template
-user=root
-stdout_events_enabled = true
-stderr_events_enabled = true
-
-[program:consul_template_haproxy]
-priority=16
-command=consul-template -wait 0.5s -template "haproxy.tmpl:/etc/haproxy/haproxy.cfg:/usr/sbin/haproxy -p /tmp/haproxy.pid -f /etc/haproxy/haproxy.cfg -sf $(pidof /usr/sbin/haproxy) || true" -consul=%(ENV_CONSUL_IP)s:8500
-directory=/opt/consul_template
+command=consul-template %(ENV_HAPROXY_APP_PARAMS)s
+directory=/opt/consul-template
 user=root
 stdout_events_enabled = true
 stderr_events_enabled = true
@@ -106,7 +93,6 @@ command=registrator %(ENV_REGISTRATOR_APP_PARAMS)s
 autorestart=true
 user=root
 startretries=100
-startsecs = 10
 stopwaitsecs = 30
 stdout_events_enabled = true
 stderr_events_enabled = true
