--- a/infrastructure/supervisord.conf
+++ b/infrastructure/supervisord.conf
@@ -24,6 +24,7 @@ result_handler = supervisor_stdout:event_handler
 priority=4
 command=/opt/consul/consul %(ENV_CONSUL_APP_PARAMS)s
 autorestart=true
+autostart=%(ENV_START_CONSUL)s
 user=root
 stdout_events_enabled = true
 stderr_events_enabled = true
@@ -32,7 +33,7 @@ stderr_events_enabled = true
 priority=2
 command=/usr/sbin/dnsmasq %(ENV_DNSMASQ_APP_PARAMS)s
 autorestart=true
-autostart=%(ENV_DNSMASQ_START)s
+autostart=%(ENV_START_DNSMASQ)s
 user=root
 stdout_events_enabled = true
 stderr_events_enabled = true
@@ -41,40 +42,44 @@ stderr_events_enabled = true
 priority=16
 command=/opt/consul-template/haproxy_watcher.sh
 autorestart=true
+autostart=%(ENV_START_HAPROXY)s
 user=root
 stdout_events_enabled = true
 stderr_events_enabled = true
 
-[program:haproxy_consul-template]
+[program:consul-template_haproxy]
 priority=16
-command=consul-template %(ENV_HAPROXY_APP_PARAMS)s
 directory=/opt/consul-template
+command=consul-template %(ENV_CONSUL_TEMPLATE_APP_PARAMS)s
+autorestart=true
+autostart=%(ENV_START_CONSUL_TEMPLATE)s
 user=root
 stdout_events_enabled = true
 stderr_events_enabled = true
 
 [program:zookeeper]
-autostart=%(ENV_MASTER)s
 priority=8
 command=/opt/zkStart.sh %(ENV_ZOOKEEPER_APP_PARAMS)s
 autorestart=true
+autostart=%(ENV_START_ZOOKEEPER)s
 user=root
 stdout_events_enabled = true
 stderr_events_enabled = true
 
 [program:mesos-master]
-autostart=%(ENV_MASTER)s
 priority=32
 command=mesos-master %(ENV_MESOS_MASTER_APP_PARAMS)s
+autorestart=true
+autostart=%(ENV_START_MESOS_MASTER)s
 user=root
 stdout_events_enabled = true
 stderr_events_enabled = true
 
 [program:marathon]
-autostart=%(ENV_MASTER)s
 priority=64
 command=marathon %(ENV_MARATHON_APP_PARAMS)s
 autorestart=true
+autostart=%(ENV_START_MARATHON)s
 user=root
 stdout_events_enabled = true
 stderr_events_enabled = true
@@ -83,6 +88,7 @@ stderr_events_enabled = true
 priority=128
 command=mesos-slave %(ENV_MESOS_SLAVE_APP_PARAMS)s
 autorestart=true
+autostart=%(ENV_START_MESOS_SLAVE)s
 user=root
 stdout_events_enabled = true
 stderr_events_enabled = true
@@ -91,6 +97,7 @@ stderr_events_enabled = true
 priority=256
 command=registrator %(ENV_REGISTRATOR_APP_PARAMS)s
 autorestart=true
+autostart=%(ENV_START_REGISTRATOR)s
 user=root
 startretries=100
 stopwaitsecs = 30
