Introducing canaries + examples

--- a/infrastructure/template.conf
+++ b/infrastructure/template.conf
@@ -46,7 +46,7 @@ frontend http-in
     backend backend_{{$service_name}}
       balance leastconn
       option http-server-close
-{{range $services}}      server {{.Node}}_{{.Port}} {{.Address}}:{{.Port}} maxconn 32
+{{range $services}}      server {{.Node}}_{{.Port}} {{.Address}}:{{.Port}} maxconn 32 {{range .Tags}}{{if .| regexMatch "weight=([0-9]+)" }} {{.| regexReplaceAll "=" " "}} {{end}}{{end}}
 {{end}}
 {{end}}{{end}}{{end}}
 
