Adding webpage info + new versions of components

--- a/infrastructure/Dockerfile
+++ b/infrastructure/Dockerfile
@@ -31,12 +31,12 @@ RUN apt-get update \
 RUN pip install supervisor-stdout
 RUN pip install https://github.com/Supervisor/supervisor/archive/3.2-branch.zip
 
-ENV DOCKER_APP_VERSION 1.5.0
-ENV CONSUL_APP_VERSION 0.5.0
+ENV DOCKER_APP_VERSION 1.6.2
+ENV CONSUL_APP_VERSION 0.5.2
 ENV CONSUL_TEMPLATE_APP_VERSION 0.9.0
 ENV ENVCONSUL_APP_VERSION 0.3.0
 ENV HAPROXY_APP_VERSION 1.5.3-1~ubuntu14.04.1
-ENV MESOS_APP_VERSION 0.21.1-1.1.ubuntu1404
+ENV MESOS_APP_VERSION 0.22.1-1.0.ubuntu1404
 ENV MARATHON_APP_VERSION 0.8.1-1.0.171.ubuntu1404
 ENV REGISTRATOR_APP_VERSION v5
 
@@ -148,6 +148,7 @@ RUN wget https://raw.githubusercontent.com/patorjk/figlet.js/master/fonts/Elite.
 ADD consul_config.json /etc/consul.d/
 ADD supervisord.conf /etc/supervisord.conf
 ADD supervisord.sh /opt/
+ADD panteras.http /etc/haproxy/errors/
 ADD version /opt/
 
 WORKDIR /opt
