Adding webpage info + new versions of components

--- a/infrastructure/template.conf
+++ b/infrastructure/template.conf
@@ -1,4 +1,4 @@
-{file "haproxy.cfg"}}
+{{file "haproxy.cfg"}}
 
 {{range services}}{{range $tag, $services := service .Name|byTag}}{{if or (eq $tag "webapp") (eq $tag "haproxy")}}    #{{$service_name := (index $services 0).Name}}{{$service_name}}
     {{range datacenters}}acl acl_{{$service_name}} hdr(host) -i {{$service_name}}.service.{{.}}.consul{{end}}
