add support for `HAPROXY_ADD_DOMAIN`
This addition allows to make a service `my_service` also accessible via `my_service.my.own.domain.com` by setting the environment variable to `HAPROXY_ADD_DOMAIN=".my.own-domain.com"`.

This will add something like the last line within the `HAProxy` config:
```
    acl acl_context-service hdr(host) -i my_service.service.my-dc.consul
    acl acl_context-service hdr(host) -i my_service.service.consul
    acl acl_context-service hdr(host) -i my_service.my.own-domain.com
```

--- a/infrastructure/template.conf
+++ b/infrastructure/template.conf
@@ -3,6 +3,7 @@
 {{range services}}{{range $tag, $services := service .Name|byTag}}{{if or (eq $tag "webapp") (eq $tag "haproxy")}}{{$service_name := (index $services 0).Name}}    # HTTP service: {{$service_name}}
     {{range datacenters}}acl acl_{{$service_name}} hdr(host) -i {{$service_name}}.service.{{.}}.consul{{end}}
     acl acl_{{$service_name}} hdr(host) -i {{$service_name}}.service.consul
+    {{if ne (env "HAPROXY_ADD_DOMAIN")  ""}}acl acl_{{$service_name}} hdr(host) -i {{$service_name}}{{env "HAPROXY_ADD_DOMAIN" }}{{end}}
     use_backend backend_{{$service_name}} if acl_{{$service_name}}
 
 {{end}}{{end}}{{end}}
