add `timeout tunnel 3600s` for better `WebSocket` support

--- a/infrastructure/haproxy.cfg
+++ b/infrastructure/haproxy.cfg
@@ -4,9 +4,10 @@ global
 
 defaults
     mode http
-    timeout connect 5000ms
-    timeout client 60000ms
-    timeout server 60000ms
+    timeout connect   5s
+    timeout client   60s
+    timeout server   60s
+    timeout tunnel 3600s
     option dontlognull
     option forwardfor
     option http-server-close
