add `option redispatch` to the `HAProxy` config

--- a/infrastructure/haproxy.cfg
+++ b/infrastructure/haproxy.cfg
@@ -11,6 +11,7 @@ defaults
     option dontlognull
     option forwardfor
     option http-server-close
+    option redispatch
     errorfile 400 /etc/haproxy/errors/400.http
     errorfile 403 /etc/haproxy/errors/403.http
     errorfile 408 /etc/haproxy/errors/408.http
