--- a/infrastructure/template.conf
+++ b/infrastructure/template.conf
@@ -2,8 +2,8 @@
 
 {{range services}}{{range $tag, $services := service .Name | byTag}}{{$service := (index $services 0)}}{{if or (eq $tag "webapp") (eq $tag "haproxy")}}    # HTTP service: {{$service.Name}}
     acl acl_{{$service.Name}} hdr(host) -i {{$service.Name}}.service.consul
-    {{range datacenters}}acl acl_{{$service.Name}} hdr(host) -i {{$service.Name}}.service.{{.}}.consul{{end}}
-    {{if ne (env "HAPROXY_ADD_DOMAIN")  ""}}acl acl_{{$service.Name}} hdr(host) -i {{$service.Name}}{{env "HAPROXY_ADD_DOMAIN"}}{{end}}
+    {{range datacenters}}acl acl_{{$service.Name}} hdr(host) -i {{$service.Name}}.service.{{.}}.consul
+    {{end}}{{if ne (env "HAPROXY_ADD_DOMAIN")  ""}}acl acl_{{$service.Name}} hdr(host) -i {{$service.Name}}{{env "HAPROXY_ADD_DOMAIN"}}{{end}}
     use_backend backend_{{$service.Name}} if acl_{{$service.Name}}
 
 {{end}}{{end}}{{end}}
