Fix newline issue for load balanced TCP services

--- a/infrastructure/template.conf
+++ b/infrastructure/template.conf
@@ -32,6 +32,6 @@ listen tcp_{{$service.Name}} :{{$tcp_port}}
     mode    tcp
     option  tcplog
     balance roundrobin
-{{range $services}}    server  {{.Node}}_{{.Port}} {{.Address}}:{{.Port}} check{{end}}
-{{end}}
+{{range $services}}    server  {{.Node}}_{{.Port}} {{.Address}}:{{.Port}} check
+{{end}}{{end}}
 {{end}}{{end}}{{end}}
