some more fixes to `keepalived.conf`

--- a/infrastructure/keepalived.conf
+++ b/infrastructure/keepalived.conf
@@ -1,7 +1,6 @@
-{{with \$node := node}}
+{{with $node_ptr := node}}{{$node := $node_ptr.Node}}
 global_defs {
-    # A descriptive name describing the router
-    router_id {{\$node.Node}}
+    router_id {{$node.Node}}     # A descriptive name describing the router
 }
  
 # Script to check if HAProxy is running. If this check fails,
@@ -10,10 +9,10 @@ global_defs {
 vrrp_script chk_haproxy {
     script "killall -0 haproxy"  # verify the pid existance
     interval 2                   # check every 2 seconds
-    weight 2                     # add 2 points of prio if OK
+    weight 2                     # add 2 points to prio if OK
 }
  
-vrrp_instance VI_1 {
+vrrp_instance VI {
     interface eth0               # interface to monitor
     state MASTER                 # will be changed to BACKUP automatically in case of leader re-voting
     virtual_router_id 111        # Assign one ID for this route
@@ -22,8 +21,8 @@ vrrp_instance VI_1 {
         {{env "KEEPALIVED_VIP"}} # the virtual IP
     }
     unicast_peer {               # IP addresses of all other peer nodes
-        {{range nodes}}{{\$n := .}}{{if ne \$n.Address \$node.Address}}{{\$n.Address}}{{end}}
-        {{end}}
+        {{range nodes}}{{$n := .}}{{if ne $n.Address $node.Address}}{{$n.Address}}
+        {{end}}{{end}}
     }
     track_script {
         chk_haproxy
