#69 - HAproxy reload gets more smooth - 2nd approach

--- a/infrastructure/Dockerfile
+++ b/infrastructure/Dockerfile
@@ -17,7 +17,6 @@ ENV GOPATH ${HOME}/go
 
 RUN apt-get update \
     && apt-get install -y \
-      libnl-utils \
       apt-transport-https \
       python-pip \
       wget \
@@ -79,6 +78,8 @@ RUN sed -i 's/^# \(.*-backports\s\)/\1/g' /etc/apt/sources.list \
 RUN sed -i 's/^ENABLED=.*/ENABLED=1/' /etc/default/haproxy \
     && rm -rf /var/lib/apt/lists/*
 
+RUN ln -s /usr/sbin/haproxy /usr/sbin/haproxy_a
+RUN ln -s /usr/sbin/haproxy /usr/sbin/haproxy_b
 
 # consul-haproxy
 RUN wget https://github.com/hashicorp/consul-template/releases/download/v${CONSUL_TEMPLATE_APP_VERSION}/consul-template_${CONSUL_TEMPLATE_APP_VERSION}_linux_amd64.tar.gz \
@@ -93,7 +94,6 @@ ADD haproxy.cfg /etc/haproxy/haproxy.cfg
 # same file for an "empty template"
 ADD haproxy.cfg        /opt/consul-template/
 ADD template.conf      /opt/consul-template/
-ADD haproxy_watcher.sh /opt/consul-template/
 ADD haproxy_reload.sh  /opt/consul-template/
 
 
@@ -148,6 +148,7 @@ RUN wget https://github.com/eBayClassifiedsGroup/registrator/releases/download/$
 RUN wget https://raw.githubusercontent.com/patorjk/figlet.js/master/fonts/Elite.flf -O /usr/share/figlet/Elite.flf
 
 ADD consul_config.json /etc/consul.d/
+ADD consul-template.sh /opt/consul-template/
 ADD supervisord.conf /etc/supervisord.conf
 ADD supervisord.sh /opt/
 ADD panteras.http /etc/haproxy/errors/
