--- a/infrastructure/haproxy.cfg
+++ b/infrastructure/haproxy.cfg
@@ -20,7 +20,7 @@ defaults
     errorfile 503 /etc/haproxy/errors/503.http
     errorfile 504 /etc/haproxy/errors/504.http
 
-listen stats :81
+listen stats :${PORT_STATS}
     mode http
     stats enable
     stats hide-version
@@ -28,7 +28,7 @@ listen stats :81
     stats uri /
 
 frontend http-in
-    bind *:80
+    bind *:${PORT_HTTP}
     log 127.0.0.1   local0
     log 127.0.0.1   local1 notice
     option httplog
