--- a/infrastructure/supervisord.conf
+++ b/infrastructure/supervisord.conf
@@ -38,19 +38,10 @@ user=root
 stdout_events_enabled = true
 stderr_events_enabled = true
 
-[program:haproxy_watcher]
-priority=16
-command=/opt/consul-template/haproxy_watcher.sh
-autorestart=true
-autostart=%(ENV_START_HAPROXY)s
-user=root
-stdout_events_enabled = true
-stderr_events_enabled = true
-
 [program:consul-template_haproxy]
 priority=16
 directory=/opt/consul-template
-command=consul-template %(ENV_CONSUL_TEMPLATE_APP_PARAMS)s
+command=consul-template.sh
 autorestart=true
 autostart=%(ENV_START_CONSUL_TEMPLATE)s
 user=root
