change `killall -0` to `pidof`

--- a/infrastructure/keepalived.conf
+++ b/infrastructure/keepalived.conf
@@ -7,10 +7,9 @@ global_defs {
 # keepalived will change the ownership of the virtual IP
 # to another server
 vrrp_script chk_haproxy {
-    # verify that either haproxy_a or haproxy_b is running
-    script "killall -0 haproxy_a || killall -0 haproxy_b"  
-    interval 2                   # check every 2 seconds
-    weight 2                     # add 2 points to prio if OK
+    script "pidof haproxy_a haproxy_b" # verify that either haproxy_a or haproxy_b is running
+    interval 2                         # check every 2 seconds
+    weight 2                           # add 2 points to prio if OK
 }
  
 vrrp_instance VI {
