`haproxy` config: create `unique ID` for each request
1. create a `unique ID` for each request
2. inject this ID into the HTTP headers as `X-Unique-ID`
3. append this ID to the HTTP log format

--- a/infrastructure/haproxy.cfg
+++ b/infrastructure/haproxy.cfg
@@ -1,11 +1,15 @@
 global
     daemon
-    maxconn 1024
+    maxconn 16384
+    log 127.0.0.1 local0
+    log 127.0.0.1 local1 notice
+    log-send-hostname
 
 defaults
     mode http
-    log 127.0.0.1 local0
-    log 127.0.0.1 local1 notice
+    log global
+    unique-id-format %{+X}o\ %ci:%cp_%fi:%fp_%Ts_%rt:%pid
+    unique-id-header X-Unique-ID
     timeout connect   5s
     timeout client   60s
     timeout server   60s
@@ -32,3 +36,4 @@ frontend http-in
     bind *:${PORT_HTTP}
     option httplog
     option forwardfor
+    log-format %ci:%cp\ [%t]\ %ft\ %b/%s\ %Tq/%Tw/%Tc/%Tr/%Tt\ %ST\ %B\ %CC\ %CS\ %tsc\ %ac/%fc/%bc/%sc/%rc\ %sq/%bq\ %hr\ %hs\ %{+Q}r\ %ID
