`keepalived` config: run the health check every second

--- a/infrastructure/keepalived.conf
+++ b/infrastructure/keepalived.conf
@@ -2,16 +2,16 @@
 global_defs {
     router_id {{$node.Node}}     # A descriptive name describing the router
 }
- 
+
 # Script to check if HAProxy is running. If this check fails,
 # keepalived will change the ownership of the virtual IP
 # to another server
 vrrp_script chk_haproxy {
     script "pidof haproxy_a haproxy_b" # verify that either haproxy_a or haproxy_b is running
-    interval 2                         # check every 2 seconds
+    interval 1                         # check every second
     weight 2                           # add 2 points to prio if OK
 }
- 
+
 vrrp_instance VI {
     interface eth0               # interface to monitor
     state MASTER                 # will be changed to BACKUP automatically in case of leader re-voting
