use `range service "consul"` instead of `range nodes`
in order to limit peer list to the nodes running a `consul agent`

--- a/infrastructure/keepalived.conf
+++ b/infrastructure/keepalived.conf
@@ -21,7 +21,7 @@ vrrp_instance VI {
         {{env "KEEPALIVED_VIP"}} # the virtual IP
     }
     unicast_peer {               # IP addresses of all other peer nodes
-        {{range nodes}}{{$n := .}}{{if ne $n.Address $node.Address}}{{$n.Address}}
+        {{range service "consul"}}{{$s := .}}{{if ne $s.Address $node.Address}}{{$s.Address}}
         {{end}}{{end}}
     }
     track_script {
