New frameworks and one scripts for all

--- a/frameworks/alpine-glibc/Dockerfile
+++ b/frameworks/alpine-glibc/Dockerfile
@@ -1,5 +1,7 @@
 FROM alpine:3.2
 
+MAINTAINER Wojciech Sielski <wsielski@team.mobile.de>
+
 RUN apk --update add curl bash
 RUN curl -O "https://circle-artifacts.com/gh/andyshinn/alpine-pkg-glibc/6/artifacts/0/home/ubuntu/alpine-pkg-glibc/packages/x86_64/glibc-2.21-r2.apk" \
   && apk add --allow-untrusted glibc-2.21-r2.apk \
