--- a/.travis.yml
+++ b/.travis.yml
@@ -10,9 +10,6 @@ before_install:
   - sudo apt-get install -y curl python-pip
   - sudo pip install pip --upgrade
   - sudo pip install docker-compose --upgrade
-  - #curl -L https://github.com/docker/compose/releases/download/1.4.0/docker-compose-`uname -s`-`uname -m` > docker-compose
-  - #chmod +x docker-compose
-  - #sudo mv docker-compose /usr/local/bin
   - ./build-docker-images.sh
   - export IP=$(/sbin/ifconfig eth0 | awk '/inet addr:/{gsub(/.*:/,"",$2);print $2;exit}')
   - echo $IP
@@ -30,4 +27,7 @@ script:
   - #docker logs --tail=2000 panteras_panteras_1
   - cd examples/SimpleWebappPython
   - ./start_with_marathon.sh deploy0_marathon.json
+  - sleep 5
+  - docker ps
+  - docker exec -ti panteras_panteras_1 supervisorctl status
   - curl --fail -H 'Host: python.service.consul' $IP
