--- a/.travis.yml
+++ b/.travis.yml
@@ -24,7 +24,9 @@ script:
   - docker ps
   - sleep 5
   - docker exec -ti panteras_panteras_1 supervisorctl status
-  - #docker logs --tail=2000 panteras_panteras_1
+  - sleep 5
+  - docker logs --tail=4000 panteras_panteras_1
+  - sudo netstat -tulpen
   - cd examples/SimpleWebappPython
   - ./start_with_marathon.sh deploy0_marathon.json
   - sleep 5
